--- a/gradle-examples/gradle-example/build.gradle
+++ b/gradle-examples/gradle-example/build.gradle
@@ -58,7 +58,7 @@ subprojects {
     }
     dependencies {
      // testImplementation 'junit:junit:4.7'
-      compile 'org.apache.httpcomponents:httpclient:4.5.10'      
+      compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.1'      
     }
     task sourceJar(type: Jar) {
       from sourceSets.main.allSource
