--- a/jenkins-examples/pipeline-examples/scripted-examples/gradle-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/scripted-examples/gradle-example/Jenkinsfile
@@ -26,7 +26,7 @@ node {
         }
 
         stage ('Exec Gradle') {
-            rtGradle.run rootDir: "gradle-examples/gradle-example/", buildFile: 'build.gradle', tasks: 'clean artifactoryPublish', buildInfo: buildInfo
+            rtGradle.run rootDir: "gradle-examples/gradle-example/", buildFile: 'build.gradle', tasks: 'clean run artifactoryPublish', buildInfo: buildInfo
         }
 
         stage ('Publish build info') {
