--- a/gradle-examples/gradle-example/build.gradle
+++ b/gradle-examples/gradle-example/build.gradle
@@ -57,8 +57,7 @@ subprojects {
       published
     }
     dependencies {
-     // testImplementation 'junit:junit:4.7'
-      compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.1'      
+      testImplementation 'junit:junit:4.7'
     }
     task sourceJar(type: Jar) {
       from sourceSets.main.allSource
