--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -26,6 +26,13 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.jaegertracing/jaeger-client -->
+<dependency>
+    <groupId>io.jaegertracing</groupId>
+    <artifactId>jaeger-client</artifactId>
+    <version>0.34.0</version>
+</dependency>
+        
     </dependencies>
 
     <build>
