--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -33,6 +33,13 @@
     <version>0.34.0</version>
 </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.12.2</version>
+</dependency>
+        
 <!-- https://mvnrepository.com/artifact/org.webjars/lodash -->
 <dependency>
     <groupId>org.webjars</groupId>
