--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -39,7 +39,8 @@
     <artifactId>lodash</artifactId>
     <version>4.0.0</version>
 </dependency>
-
+</dependencies>
+        
     <build>
         <pluginManagement>
             <plugins>
