--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -39,6 +39,15 @@
     <artifactId>lodash</artifactId>
     <version>4.0.0</version>
 </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
+
+        
 </dependencies>
         
     <build>
