--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -47,6 +47,13 @@
     <version>1.2.17</version>
 </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.17.0</version>
+</dependency>
+        
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-ext -->
 <dependency>
     <groupId>org.slf4j</groupId>
