--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -33,6 +33,12 @@
     <version>0.34.0</version>
 </dependency>
         
+<dependency>
+	<groupId>com.google.cloud</groupId>
+	<artifactId>google-cloud-core</artifactId>
+	<version>2.10.0</version>
+</dependency>
+        
     </dependencies>
 
     <build>
