--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -47,6 +47,12 @@
     <version>1.2.17</version>
 </dependency>
         
+<dependency>
+	<groupId>com.google.cloud</groupId>
+	<artifactId>google-cloud-core</artifactId>
+	<version>2.10.0</version>
+</dependency>
+        
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
