--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -61,6 +61,13 @@
     <version>1.7.28</version>
 </dependency>
         
+<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-bigquerystorage -->
+<dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-bigquerystorage</artifactId>
+    <version>2.10.0</version>
+</dependency>
+        
 </dependencies>
         
     <build>
