--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -61,10 +61,10 @@
     <version>1.7.28</version>
 </dependency>
         
-<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-bigquerystorage -->
+<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-core -->
 <dependency>
     <groupId>com.google.cloud</groupId>
-    <artifactId>google-cloud-bigquerystorage</artifactId>
+    <artifactId>google-cloud-core</artifactId>
     <version>2.10.0</version>
 </dependency>
         
