--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -25,6 +25,14 @@
     <artifactId>guava</artifactId>
     <version>32.0.1-android</version>
 </dependency>
+
+    <!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
+<dependency>
+    <groupId>jakarta.annotation</groupId>
+    <artifactId>jakarta.annotation-api</artifactId>
+    <version>1.3.5</version>
+</dependency>
+
 </dependencies>
         
     <build>
